# bane

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  concat.py
src/: CMakeLists.txt  bane.h  helpers.c  helpers.h  image.c  main.c  spiritlib.h  texture_atlas.c
test/: CMakeLists.txt  test_texture_atlas.c
