set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
cmake_minimum_required(VERSION 3.21)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_BUILD_TYPE Debug CACHE STRING "" FORCE)

project(bane LANGUAGES C)

# FREETYPE
set(FT_WITH_ZLIB OFF CACHE BOOL "" FORCE)
set(FT_WITH_BZIP2 OFF CACHE BOOL "" FORCE)
set(FT_WITH_PNG OFF CACHE BOOL "" FORCE)
set(FT_WITH_HARFBUZZ OFF CACHE BOOL "" FORCE)
set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB ON CACHE BOOL "" FORCE)
set(CMAKE_DISABLE_FIND_PACKAGE_BZip2 ON CACHE BOOL "" FORCE)
set(CMAKE_DISABLE_FIND_PACKAGE_PNG ON CACHE BOOL "" FORCE)
set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz ON CACHE BOOL "" FORCE)

add_subdirectory(extern/freetype)

# RAYLIB
# https://github.com/raysan5/raylib/wiki/CMake-Build-Options
set(CUSTOMIZE_BUILD ON CACHE BOOL "" FORCE)
set(PLATFORM Desktop CACHE STRING "" FORCE)
set(GLFW_BUILD_WAYLAND ON CACHE BOOL "" FORCE)
set(USE_AUDIO OFF CACHE BOOL "" FORCE)
set(SUPPORT_MODULE_RAUDIO OFF CACHE BOOL "" FORCE)
set(SUPPORT_MODULE_RSHAPES OFF CACHE BOOL "" FORCE)
set(SUPPORT_MODULE_RMODELS OFF CACHE BOOL "" FORCE)
set(SUPPORT_CAMERA_SYSTEM OFF CACHE BOOL "" FORCE)
set(SUPPORT_GIF_RECORDING OFF CACHE BOOL "" FORCE)

set(SUPPORT_FILEFORMAT_PNG ON CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_JPG ON CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_BMP OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_TGA OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_GIF OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_QOI OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_PSD OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_DDS OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_HDR OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_PIC OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_KTX OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_AST OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_PKM OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_P OFF CACHE BOOL "" FORCE)
set(SUPPOR_DEFAULT_FONT OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_TTF OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_FNT OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_BDF OFF CACHE BOOL "" FORCE)
set(SUPPORT_TEXT_MANIPULATION OFF CACHE BOOL "" FORCE)
set(SUPPORT_FONT_ATLAS_WHITE_REC ON CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_OBJ OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_MTL OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_IQM OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_GLTF OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_VOX OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_M3D OFF CACHE BOOL "" FORCE)
set(SUPPORT_MESH_GENERATION OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_WAV OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_OGG OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_MP3 OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_QOA OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_FLAC OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_XM OFF CACHE BOOL "" FORCE)
set(SUPPORT_FILEFORMAT_MOD OFF CACHE BOOL "" FORCE)
set(SUPPORT_STANDARD_FILEIO OFF CACHE BOOL "" FORCE)
set(SUPPORT_SAVE_PNG ON CACHE BOOL "" FORCE)
set(SUPPORT_SAVE_BMP OFF CACHE BOOL "" FORCE)
set(SUPPORT_TRACELOG ON CACHE BOOL "" FORCE)
set(SUPPORT_SCREEN_CAPTURE ON CACHE BOOL "" FORCE)

add_subdirectory(extern/raylib)

# BANE

add_subdirectory(src)

enable_testing()
add_subdirectory(test)